--- a/src/app/pages/src-catalogue/user-src-catalogue/index/user-src-catalogue.component.html
+++ b/src/app/pages/src-catalogue/user-src-catalogue/index/user-src-catalogue.component.html
@@ -1,9 +1,9 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Daftar Vendor'">
+  <page-content-header [contentTitle]="'Daftar Pengguna'">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
-        [routerLink]="['/src-catalogue', 'vendors', 'create']">
+        [routerLink]="['/src-catalogue', 'users', 'create']">
         <mat-icon>add</mat-icon>BUAT
       </button>
     </div>
@@ -13,7 +13,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar Vendor</h2>
+        <h2 class="pl-8">Daftar Pengguna</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
@@ -26,30 +26,44 @@
         [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
         (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)">
 
-        <ngx-datatable-column name="Nama Vendor" prop="name">
+        <ngx-datatable-column name="Nama Vendor" prop="vendor_company_name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" (click)="directDetail(row)">{{row.name}}</span>
+            <span class="row-name" (click)="directDetail(row)">{{row.vendor_company_name}}</span>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama PIC" prop="pic_name">
+        <ngx-datatable-column name="Nama User" prop="fullname">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row['pic_name'] }}
+            {{ row['fullname'] }}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Email PIC" prop="pic_email">
+        <ngx-datatable-column name="Email" prop="email">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row['pic_email'] }}
+            {{ row['email'] }}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="68" name="Status" headerClass="textright" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
-            style="justify-content: center !important">
-            <div class="name-container pl-12">
-              <mat-icon *ngIf="row.status == 'active'" class="active-icon mat-green-600-bg s-18">check</mat-icon>
-              <mat-icon *ngIf="row.status == 'inactive'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
+        <ngx-datatable-column name="Terakhir Masuk" prop="last_login">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.last_login | date: 'dd/MM/yyyy HH:mm'}}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Terakhir Diupdate" prop="updated_at">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.updated_at | date: 'dd/MM/yyyy HH:mm'}}
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column [width]="100" name="Status" prop="status">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <div class="name-container">
+              <p class="status text-truncate h6 p-4"
+                style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
+                [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
+                {{row.status == 'active' ? 'Aktif' : 'Tidak Aktif'}}
+              </p>
             </div>
           </ng-template>
         </ngx-datatable-column>
