--- a/src/app/pages/user-management/private-label/panel-mitra/dialog-import/import-panel-mitra-dialog.component.html
+++ b/src/app/pages/user-management/private-label/panel-mitra/dialog-import/import-panel-mitra-dialog.component.html
@@ -64,7 +64,7 @@
           [disabled]="rows.length === 0">OK</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
           [disabled]="uploading">Batal</button>
-        <button type="button" mat-raised-button color="primary" [disabled]="!onImport" (click)="preview()">Preview</button>
+        <!-- <button type="button" mat-raised-button color="primary" [disabled]="!onImport" (click)="preview()">Preview</button> -->
       </div>
     </div>
   </div>
