--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -5,6 +5,10 @@
       type="button">SIMPAN</button>
   </page-content-header>
   <!-- / HEADER -->
+
+  <div *ngIf="onLoad" fxLayout="row" fxLayoutAlign="center center" class="pt-48">
+    <mat-spinner [strokeWidth]="6" [diameter]="50" color="accent"></mat-spinner>
+  </div>
   <div class="content p-24" *ngIf="!onLoad">
     <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column">
 
@@ -114,7 +118,7 @@
                       </mat-radio-button>
                     </mat-radio-group>
                   </div>
-                  <div fxLayout="row" style="margin-left: 50px;" *ngIf="!detailProduct.is_private_label_editable">
+                  <div fxLayout="row" style="margin-left: 50px;" *ngIf="detailProduct.is_private_label_editable">
                     <div class="pt-16" fxLayout="column">
                       <strong>Pin Up Product</strong>
                       <mat-radio-group formControlName="status_pin_up" class="radio-group pb-16">
@@ -151,8 +155,8 @@
                 </div>
                 <!-- <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src">Promo SRC</mat-checkbox> -->
                 <div fxLayout="row" fxLayoutGap="20px">
-                  <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src" [disabled]="detailProduct.is_private_label_editable">Promo SRC</mat-checkbox>
-                  <mat-checkbox (change)="isPrivateLabel($event)" class="mt-4 ml-4 mb-8" formControlName="is_private_label" [disabled]="detailProduct.is_private_label_editable">Private Label</mat-checkbox>
+                  <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src" [disabled]="!detailProduct.is_private_label_editable">Promo SRC</mat-checkbox>
+                  <mat-checkbox (change)="isPrivateLabel($event)" class="mt-4 ml-4 mb-8" formControlName="is_private_label" [disabled]="!detailProduct.is_private_label_editable">Private Label</mat-checkbox>
                 </div>
               </div>
               <div class="" formArrayName="areas"
