finishing SRC Catalogue - 1

--- a/src/app/pages/src-catalogue/product-catalogue/create/product-catalogue-create.component.html
+++ b/src/app/pages/src-catalogue/product-catalogue/create/product-catalogue-create.component.html
@@ -44,6 +44,47 @@
             <div fxLayout="row" fxFlex="10">
               <mat-checkbox formControlName="stage">Masukan ke Tahapan?</mat-checkbox>
             </div>
+            <div fxFlex="5"></div>
+            <div fxLayout="column" *ngIf="formProduct.get('stage').value">
+              <div fxLayout="row" *ngFor="let item of listStages; let i = index;" style="cursor: pointer;"
+                (click)="checkStages(i)">
+                <mat-icon style="color: #fe0000;">{{ item.checked ? 'check_box' : 'check_box_outline_blank' }}
+                </mat-icon>
+                <span style="font-weight: bold;font-style: italic;">
+                  {{ item.name }}
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <div fxLayout="column">
+            <h3>Unggah Gambar Layout</h3>
+            <small>Dimensi 410px410p, Besar file maksimal 2mb</small>
+            <div class="ayo-middle" style="height: 70px;width: 400px;" fxLayout="column">
+              <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
+                [accept]="'image/*'" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
+                (fileChange)="changeImage($event)">
+                <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
+                  <!-- <mat-icon style="width: 48px;height: 48px;font-size: 48px;">add_photo_alternate_outline</mat-icon> -->
+                  <!-- <br> -->
+                  <span matPrefix>Tarik Gambar Kesini atau
+                    <strong>Pilih File</strong>
+                  </span>
+                  <!-- <span matPrefix>Ukuran 800x800 piksel, Maksimum 2mb</span> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div fxLayout="column">
+            <div class="" *ngFor="let imgUrl of image_list;let i = index" style="margin-top: 15px;margin-bottom: 15px;">
+              <div class="delete">
+                <mat-icon style="cursor: pointer;" (click)="removeImage(i)">cancel_outline</mat-icon>
+              </div>
+              <!-- <div class="previewIcon" [ngfBackground]="files"></div> -->
+              <div>
+                <img id="image" [src]='imgUrl' width="410px" height="410px" />
+              </div>
+            </div>
           </div>
 
           <div fxLayout="row">
