--- a/src/scss/globals/global.scss
+++ b/src/scss/globals/global.scss
@@ -1017,6 +1017,37 @@ a {
   padding: 6px !important;
 }
 
+/** color SRC Catalogue */
+.mat-baru-color {
+  background-color: #ff9800 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+.mat-dibatalkan-color {
+  background-color: #f44336 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+.mat-diproses-color {
+  background-color: #916000 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+.mat-dikirim-color {
+  background-color: #a5c267 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+.mat-diterima-color {
+  background-color: #388e3c !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
 // a[href="https://froala.com/wysiwyg-editor"],
 // a[href="https://www.froala.com/wysiwyg-editor?k=u"] {
 //   display: none !important;
