--- a/src/app/pages/src-catalogue/product-catalogue/index/product-catalogue.component.html
+++ b/src/app/pages/src-catalogue/product-catalogue/index/product-catalogue.component.html
@@ -71,6 +71,12 @@
           </ng-template>
         </ngx-datatable-column>
 
+        <ngx-datatable-column name="Nama Vendor" prop="vendor_company">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <span class="row-name" (click)="directDetail(row)">{{row.vendor_company}}</span>
+          </ng-template>
+        </ngx-datatable-column>
+
         <ngx-datatable-column name="Nama Produk" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span class="row-name" (click)="directDetail(row)">{{row.name}}</span>
@@ -89,7 +95,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Ada Harga Paguyuban" headerClass="textright" prop="have_community_price">>
+        <!-- <ngx-datatable-column name="Ada Harga Paguyuban" headerClass="textright" prop="have_community_price">>
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
             style="justify-content: center !important">
             <div class="name-container pl-12">
@@ -97,11 +103,11 @@
               <mat-icon *ngIf="row.have_community_price == 0" class="active-icon mat-red-500-bg s-18">close</mat-icon>
             </div>
           </ng-template>
-        </ngx-datatable-column>
+        </ngx-datatable-column> -->
 
         <ngx-datatable-column name="Stok" prop="availability">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.availability}}
+            {{renderStockName(row.availability)}}
           </ng-template>
         </ngx-datatable-column>
 
