--- a/src/scss/globals/global.prod.scss
+++ b/src/scss/globals/global.prod.scss
@@ -497,9 +497,9 @@ mat-form-field.orders {
       display: none;
     }
 
-    .mat-form-field-label-wrapper {
-      display: none;
-    }
+    // .mat-form-field-label-wrapper {
+    //   display: none;
+    // }
 
     .mat-input-ripple.mat-form-field-ripple {
       background-color: transparent;
