--- a/src/app/pages/user-management/private-label/panel-mitra/create/panel-mitra-create.component.scss
+++ b/src/app/pages/user-management/private-label/panel-mitra/create/panel-mitra-create.component.scss
@@ -7,3 +7,13 @@
   background-color: #3e3e3e;
   color: #fff
 }
+
+.mat-checkbox-all.mat-checkbox.mat-accent {
+  .mat-checkbox-layout {
+    .mat-checkbox-inner-container {
+      .mat-checkbox-background {
+        background-color: #cacaca !important;
+      }
+    }
+  }
+}
