--- a/src/app/pages/src-catalogue/product-catalogue/index/product-catalogue.component.html
+++ b/src/app/pages/src-catalogue/product-catalogue/index/product-catalogue.component.html
@@ -64,8 +64,9 @@
         <ngx-datatable-column [width]="140" name="" [canAutoResize]="false" [sortable]="true">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container product-image m-8">
-              <img class="" *ngIf="row.image_url" [src]="row.image_url">
-              <img class="" *ngIf="!row.image_url" [src]="'assets/images/ecommerce/product-image-placeholder.png'">
+              <img class="" *ngIf="row.images && row.images[0]" [src]="row.images[0]">
+              <img class="" *ngIf="!row.images || !row.images[0]"
+                [src]="'assets/images/ecommerce/product-image-placeholder.png'">
             </div>
           </ng-template>
         </ngx-datatable-column>
