fix: private-label #18

--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -189,7 +189,7 @@
                   fxLayoutGap.lt-md="0px">
                   <div fxFlex="90" class="py-16 pr-16">
                     <div class="text-center">
-                      <div style="font-size: 20px; font-weight: 600; text-decoration: underline;">DETAIL PO</div>
+                      <div style="font-size: 20px; font-weight: 600; text-decoration: underline;">Detail Pemesanan/Preorder</div>
                       <div class="py-8" fxFlex="100" fxLayout="row" fxLayoutAlign="center center">
                         <span>{{detailOrder?.invoice_number}}</span>
                       </div>
@@ -220,7 +220,7 @@
                       </div>
                     </div>
                     <div style="text-align: right; font-size:18px">
-                      Total Nilai PO
+                      Total Nilai Pemesanan/Preorder
                       <span style="font-size: 18px; font-weight: 600;">Rp {{total | rupiahFormaterWithoutRp}}</span>
                     </div>
                     <!-- <div class="pt-8 border-bottom-custom"></div> -->
