fix: private-label #20 - wholesaler_name on PO - bug export PO ms Edge

--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -202,7 +202,7 @@
                         </div>
                         <div fxLayout="column" fxLayoutAlign="end end">
                           <div class="text-bold">{{detailOrder?.owner}}</div>
-                          <div class="text-bold">{{detailOrder?.name}}</div>
+                          <div class="text-bold">{{detailOrder?.wholesaler_name}}</div>
                           <div>{{detailOrder?.address || '-'}}</div>
                           <div>{{detailOrder?.phone || '-'}}</div>
                         </div>
