--- a/src/app/pages/src-catalogue/order-catalogue/index/order-catalogue.component.html
+++ b/src/app/pages/src-catalogue/order-catalogue/index/order-catalogue.component.html
@@ -71,6 +71,9 @@
           </ng-template>
         </ngx-datatable-column>
 
+        <ngx-datatable-column name="Nama Vendor" prop="vendor_company">
+        </ngx-datatable-column>
+
         <ngx-datatable-column name=" Nama" prop="name">
         </ngx-datatable-column>
         <ngx-datatable-column name="Alamat" prop="address"></ngx-datatable-column>
